[gd_scene load_steps=8 format=3 uid="uid://bmbwywh8gixyr"]

[ext_resource type="Script" uid="uid://mj7rfdifhirt" path="res://src/Scripts/friendly_ant.gd" id="1_p7xjd"]
[ext_resource type="Texture2D" uid="uid://dp1lg0hvlim0a" path="res://src/Sprites/FriendlyAnt.png" id="1_txt7p"]
[ext_resource type="Texture2D" uid="uid://dhmpq2r0tk235" path="res://src/Sprites/FriendlyAntFull.png" id="3_prmu5"]
[ext_resource type="Texture2D" uid="uid://dd70dyd128t6f" path="res://src/Sprites/DeadAnt.png" id="4_ocbbg"]
[ext_resource type="AudioStream" uid="uid://mvv22qqsmai6" path="res://src/Sounds/hit.wav" id="5_l7nud"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ocbbg"]
size = Vector2(18, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_prmu5"]
radius = 64.0

[node name="Ant" type="CharacterBody2D"]
script = ExtResource("1_p7xjd")
empty = ExtResource("1_txt7p")
full = ExtResource("3_prmu5")
dead = ExtResource("4_ocbbg")
speed = 5000
moveRange = 128
hp = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("1_txt7p")

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="." groups=["Ant"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_ocbbg")

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_prmu5")

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_l7nud")
volume_db = -20.0

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_range_area_exited"]
